# AM-ANT

./: README.md
Individual1/: CMakeLists.txt  main.cpp
Individual2/: CMakeLists.txt  Fraction.cpp  Fraction.h  InfiniteInt.cpp  InfiniteInt.h  README.txt.txt  gcdLib.cpp  gcdLib.h  main.cpp  make_graphs.h
Lab1/: CMakeLists.txt  InfiniteInt.cpp  InfiniteInt.h  getCPUTime.h  main.cpp  make_graphs.h  tests.h
Lab2/: CMakeLists.txt  InfiniteInt.cpp  InfiniteInt.h  gcdLib.cpp  gcdLib.h  getCPUTime.h  main.cpp  make_graphs.h
Lab3/: CMakeLists.txt  main.cpp
Lab3/ntl-10.3.0/src/: MakeDesc  TestGetPID  TestGetTime  gen_gmp_aux  mfileout
